--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@turf/bbox": "^7.0.0",
+    "@turf/helpers": "^7.0.0",
+    "@types/geojson": "^7946.0.14",
     "@xyflow/react": "^12.0.3",
+    "deck.gl": "^9.0.24",
+    "mapbox-gl": "^3.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.25.1",
     "react-simple-toasts": "^5.10.1",
     "styled-components": "^6.1.12"
