--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@loaders.gl/core": "^4.2.2",
+    "@loaders.gl/gltf": "^4.2.2",
     "@turf/bbox": "^7.0.0",
     "@turf/helpers": "^7.0.0",
+    "@turf/turf": "^7.0.0",
     "@types/geojson": "^7946.0.14",
     "@xyflow/react": "^12.0.3",
     "deck.gl": "^9.0.24",
@@ -24,7 +27,8 @@
     "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.25.1",
     "react-simple-toasts": "^5.10.1",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -34,6 +38,7 @@
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
